feat: use django-sms

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ tests_require =
 install_requires =
     Django >= 4.2.16
     asgiref >= 3.8.1
+    django-sms >= 0.7.0
 
 [options.extras_require]
 mfa =
