feat: implement sms provider

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ install_requires =
     Django >= 4.2.16
     asgiref >= 3.8.1
     django-sms >= 0.7.0
+    django-phonenumber-field[phonenumbers] >= 8.0.0
+    babel >= 2.17.0
 
 [options.extras_require]
 mfa =
